# IntelligentSystemsProject

./: README.md
Last_Year/SI_CODE/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  config  pcd_read  pcd_read.cbp  pcd_read.cpp
Last_Year/SI_CODE/doc/: doxyfile
Last_Year/SI_CODE/doc/html/: _bss_bag_8cpp.html  _bss_bag_8cpp__incl.map  _bss_bag_8cpp__incl.md5  _bss_bag_8cpp_source.html  _bss_bag_8h.html  _bss_bag_8h__dep__incl.map  _bss_bag_8h__dep__incl.md5  _bss_bag_8h__incl.map  _bss_bag_8h__incl.md5  _bss_bag_8h_source.html  _category_8cpp.html  _category_8cpp__incl.map  _category_8cpp__incl.md5  _category_8cpp_source.html  _category_8h.html  _category_8h__dep__incl.map  _category_8h__dep__incl.md5  _category_8h__incl.map  _category_8h__incl.md5  _category_8h_source.html  _category_recognizer_8cpp.html  _category_recognizer_8cpp__incl.map  _category_recognizer_8cpp__incl.md5  _category_recognizer_8cpp_source.html  _category_recognizer_8h.html  _category_recognizer_8h__dep__incl.map  (+348 more)
Last_Year/SI_CODE/include/: Category.h  FeatureExtractor.h  FeatureMetadata.h  Measure.h  Memory.h  ObjectViewRepository.h  PerformanceManager.h  TestResult.h  kmeans.h
Last_Year/SI_CODE/src/: Category.cpp  Memory.cpp  Searcher.cpp  Viewer.cpp  kmeans.cpp
Last_Year/SI_VIZ/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  config  viz
Last_Year/SI_VIZ/include/: FeatureExtractor.h  ObjectViewRepository.h  Searcher.h  Viewer.h  include.h
Last_Year/SI_VIZ/src/: FeatureExtractor.cpp  ObjectViewRepository.cpp  Searcher.cpp  Viewer.cpp  si.cpp
(+8302 files in other folders)
